vlib/v/checker/tests/option_map_or_unwrap_call_default_alias_err.vv
// An `or {}` default that is an arbitrary map-returning call can return a
// caller-owned alias (`id` just returns its argument), so `x := opt or { id(fb) }`
// would alias `fb` and observe later mutations — the same as `or { fb }`. Only
// calls known to produce fresh storage (`clone`/`move`) or `@[noreturn]` calls
// are exempted. See vlang/v issue #27867.
fn maybe_none() ?map[string]int {
	return none
}

fn id(m map[string]int) map[string]int {
	return m
}

fn main() {
	mut fallback := {
		'x': 1
	}
	opt := maybe_none()
	x := opt or { id(fallback) }
	fallback['x'] = 2
	println(x)
}
